--- a/УправДом/src/Documents/ОплатаТКО/Forms/ФормаДокумента/Form.form
+++ b/УправДом/src/Documents/ОплатаТКО/Forms/ФормаДокумента/Form.form
@@ -458,6 +458,7 @@
           <autoMaxWidth>true</autoMaxWidth>
           <autoMaxHeight>true</autoMaxHeight>
           <wrap>true</wrap>
+          <openButton>false</openButton>
           <chooseType>true</chooseType>
           <typeDomainEnabled>true</typeDomainEnabled>
           <textEdit>true</textEdit>
