--- a/УправДом/src/Catalogs/Поставщики/Forms/ФормаЭлемента/Form.form
+++ b/УправДом/src/Catalogs/Поставщики/Forms/ФормаЭлемента/Form.form
@@ -42,6 +42,51 @@
     </extInfo>
   </items>
   <items xsi:type="form:FormField">
+    <name>Владелец</name>
+    <id>7</id>
+    <title>
+      <key>ru</key>
+      <value>Вид платежа</value>
+    </title>
+    <visible>true</visible>
+    <enabled>true</enabled>
+    <userVisible>
+      <common>true</common>
+    </userVisible>
+    <dataPath xsi:type="form:DataPath">
+      <segments>Объект.Owner</segments>
+    </dataPath>
+    <extendedTooltip>
+      <name>ВладелецРасширеннаяПодсказка</name>
+      <id>9</id>
+      <type>Label</type>
+      <autoMaxWidth>true</autoMaxWidth>
+      <autoMaxHeight>true</autoMaxHeight>
+      <extInfo xsi:type="form:LabelDecorationExtInfo">
+        <horizontalAlign>Left</horizontalAlign>
+      </extInfo>
+    </extendedTooltip>
+    <contextMenu>
+      <name>ВладелецКонтекстноеМеню</name>
+      <id>8</id>
+      <autoFill>true</autoFill>
+    </contextMenu>
+    <type>InputField</type>
+    <editMode>EnterOnInput</editMode>
+    <showInHeader>true</showInHeader>
+    <headerHorizontalAlign>Left</headerHorizontalAlign>
+    <showInFooter>true</showInFooter>
+    <extInfo xsi:type="form:InputFieldExtInfo">
+      <autoMaxWidth>true</autoMaxWidth>
+      <autoMaxHeight>true</autoMaxHeight>
+      <wrap>true</wrap>
+      <extendedEditMultipleValues>true</extendedEditMultipleValues>
+      <chooseType>true</chooseType>
+      <typeDomainEnabled>true</typeDomainEnabled>
+      <textEdit>true</textEdit>
+    </extInfo>
+  </items>
+  <items xsi:type="form:FormField">
     <name>Наименование</name>
     <id>4</id>
     <visible>true</visible>
@@ -83,23 +128,20 @@
     </extInfo>
   </items>
   <items xsi:type="form:FormField">
-    <name>Владелец</name>
-    <id>7</id>
-    <title>
-      <key>ru</key>
-      <value>Вид платежа</value>
-    </title>
+    <name>ПолноеИмя</name>
+    <id>27</id>
     <visible>true</visible>
     <enabled>true</enabled>
     <userVisible>
       <common>true</common>
     </userVisible>
     <dataPath xsi:type="form:DataPath">
-      <segments>Объект.Owner</segments>
+      <segments>Объект.ПолноеИмя</segments>
     </dataPath>
+    <titleLocation>Left</titleLocation>
     <extendedTooltip>
-      <name>ВладелецРасширеннаяПодсказка</name>
-      <id>9</id>
+      <name>ПолноеИмяРасширеннаяПодсказка</name>
+      <id>29</id>
       <type>Label</type>
       <autoMaxWidth>true</autoMaxWidth>
       <autoMaxHeight>true</autoMaxHeight>
@@ -108,12 +150,12 @@
       </extInfo>
     </extendedTooltip>
     <contextMenu>
-      <name>ВладелецКонтекстноеМеню</name>
-      <id>8</id>
+      <name>ПолноеИмяКонтекстноеМеню</name>
+      <id>28</id>
       <autoFill>true</autoFill>
     </contextMenu>
     <type>InputField</type>
-    <editMode>EnterOnInput</editMode>
+    <editMode>Enter</editMode>
     <showInHeader>true</showInHeader>
     <headerHorizontalAlign>Left</headerHorizontalAlign>
     <showInFooter>true</showInFooter>
@@ -121,7 +163,7 @@
       <autoMaxWidth>true</autoMaxWidth>
       <autoMaxHeight>true</autoMaxHeight>
       <wrap>true</wrap>
-      <extendedEditMultipleValues>true</extendedEditMultipleValues>
+      <multiLine>true</multiLine>
       <chooseType>true</chooseType>
       <typeDomainEnabled>true</typeDomainEnabled>
       <textEdit>true</textEdit>
@@ -169,16 +211,19 @@
     </extInfo>
   </items>
   <items xsi:type="form:FormField">
-    <name>Телефон</name>
-    <id>13</id>
+    <name>ОГРН</name>
+    <id>30</id>
     <visible>true</visible>
     <enabled>true</enabled>
     <userVisible>
       <common>true</common>
     </userVisible>
+    <dataPath xsi:type="form:DataPath">
+      <segments>Объект.ОГРН</segments>
+    </dataPath>
     <extendedTooltip>
-      <name>ТелефонРасширеннаяПодсказка</name>
-      <id>15</id>
+      <name>ОГРНРасширеннаяПодсказка</name>
+      <id>32</id>
       <type>Label</type>
       <autoMaxWidth>true</autoMaxWidth>
       <autoMaxHeight>true</autoMaxHeight>
@@ -187,26 +232,38 @@
       </extInfo>
     </extendedTooltip>
     <contextMenu>
-      <name>ТелефонКонтекстноеМеню</name>
-      <id>14</id>
+      <name>ОГРНКонтекстноеМеню</name>
+      <id>31</id>
       <autoFill>true</autoFill>
     </contextMenu>
-    <editMode>EnterOnInput</editMode>
+    <type>InputField</type>
+    <editMode>Enter</editMode>
     <showInHeader>true</showInHeader>
     <headerHorizontalAlign>Left</headerHorizontalAlign>
     <showInFooter>true</showInFooter>
+    <extInfo xsi:type="form:InputFieldExtInfo">
+      <autoMaxWidth>true</autoMaxWidth>
+      <autoMaxHeight>true</autoMaxHeight>
+      <wrap>true</wrap>
+      <chooseType>true</chooseType>
+      <typeDomainEnabled>true</typeDomainEnabled>
+      <textEdit>true</textEdit>
+    </extInfo>
   </items>
   <items xsi:type="form:FormField">
-    <name>ЭлектроннаяПочта</name>
-    <id>16</id>
+    <name>КПП</name>
+    <id>33</id>
     <visible>true</visible>
     <enabled>true</enabled>
     <userVisible>
       <common>true</common>
     </userVisible>
+    <dataPath xsi:type="form:DataPath">
+      <segments>Объект.КПП</segments>
+    </dataPath>
     <extendedTooltip>
-      <name>ЭлектроннаяПочтаРасширеннаяПодсказка</name>
-      <id>18</id>
+      <name>КППРасширеннаяПодсказка</name>
+      <id>35</id>
       <type>Label</type>
       <autoMaxWidth>true</autoMaxWidth>
       <autoMaxHeight>true</autoMaxHeight>
@@ -215,42 +272,23 @@
       </extInfo>
     </extendedTooltip>
     <contextMenu>
-      <name>ЭлектроннаяПочтаКонтекстноеМеню</name>
-      <id>17</id>
+      <name>КППКонтекстноеМеню</name>
+      <id>34</id>
       <autoFill>true</autoFill>
     </contextMenu>
-    <editMode>EnterOnInput</editMode>
+    <type>InputField</type>
+    <editMode>Enter</editMode>
     <showInHeader>true</showInHeader>
     <headerHorizontalAlign>Left</headerHorizontalAlign>
     <showInFooter>true</showInFooter>
-  </items>
-  <items xsi:type="form:FormField">
-    <name>Сайт</name>
-    <id>19</id>
-    <visible>true</visible>
-    <enabled>true</enabled>
-    <userVisible>
-      <common>true</common>
-    </userVisible>
-    <extendedTooltip>
-      <name>СайтРасширеннаяПодсказка</name>
-      <id>21</id>
-      <type>Label</type>
+    <extInfo xsi:type="form:InputFieldExtInfo">
       <autoMaxWidth>true</autoMaxWidth>
       <autoMaxHeight>true</autoMaxHeight>
-      <extInfo xsi:type="form:LabelDecorationExtInfo">
-        <horizontalAlign>Left</horizontalAlign>
-      </extInfo>
-    </extendedTooltip>
-    <contextMenu>
-      <name>СайтКонтекстноеМеню</name>
-      <id>20</id>
-      <autoFill>true</autoFill>
-    </contextMenu>
-    <editMode>EnterOnInput</editMode>
-    <showInHeader>true</showInHeader>
-    <headerHorizontalAlign>Left</headerHorizontalAlign>
-    <showInFooter>true</showInFooter>
+      <wrap>true</wrap>
+      <chooseType>true</chooseType>
+      <typeDomainEnabled>true</typeDomainEnabled>
+      <textEdit>true</textEdit>
+    </extInfo>
   </items>
   <items xsi:type="form:FormField">
     <name>ЛицевойСчет</name>
@@ -330,6 +368,31 @@
   <autoCommandBar>
     <name>ФормаКоманднаяПанель</name>
     <id>-1</id>
+    <items xsi:type="form:Button">
+      <name>ФормаЗаполнитьПоИНН</name>
+      <id>36</id>
+      <visible>true</visible>
+      <enabled>true</enabled>
+      <userVisible>
+        <common>true</common>
+      </userVisible>
+      <extendedTooltip>
+        <name>ФормаЗаполнитьПоИННРасширеннаяПодсказка</name>
+        <id>37</id>
+        <type>Label</type>
+        <autoMaxWidth>true</autoMaxWidth>
+        <autoMaxHeight>true</autoMaxHeight>
+        <extInfo xsi:type="form:LabelDecorationExtInfo">
+          <horizontalAlign>Left</horizontalAlign>
+        </extInfo>
+      </extendedTooltip>
+      <commandName>Form.Command.ЗаполнитьПоИНН</commandName>
+      <representation>Auto</representation>
+      <autoMaxWidth>true</autoMaxWidth>
+      <autoMaxHeight>true</autoMaxHeight>
+      <placementArea>UserCmds</placementArea>
+      <representationInContextMenu>Auto</representationInContextMenu>
+    </items>
     <horizontalAlign>Left</horizontalAlign>
     <autoFill>true</autoFill>
   </autoCommandBar>
@@ -366,6 +429,24 @@
     <main>true</main>
     <savedData>true</savedData>
   </attributes>
+  <formCommands>
+    <name>ЗаполнитьПоИНН</name>
+    <title>
+      <key>ru</key>
+      <value>Заполнить по ИНН</value>
+    </title>
+    <id>1</id>
+    <use>
+      <common>true</common>
+    </use>
+    <action xsi:type="form:FormCommandHandlerContainer">
+      <handler>
+        <name>ЗаполнитьПоИНН</name>
+      </handler>
+    </action>
+    <modifiesStoredData>true</modifiesStoredData>
+    <currentRowUse>Auto</currentRowUse>
+  </formCommands>
   <commandInterface>
     <navigationPanel/>
     <commandBar/>
